--- a/src/App.css
+++ b/src/App.css
@@ -8,7 +8,7 @@ body {
 }
 
 h1 {
-  font-size: 32px;
+  font-size: 48px;
   font-weight: 400;
   color: black;
 }
@@ -18,4 +18,6 @@ a {
   font-weight: 400;
   color: gray;
   text-decoration: none;
+  margin-top: 10px;
+  margin-bottom: 10px;
 }
