--- a/src/App.css
+++ b/src/App.css
@@ -16,8 +16,14 @@ h1 {
 a {
   font-size: 48px;
   font-weight: 400;
-  color: gray;
+  color: darkgray;
   text-decoration: none;
   margin-top: 10px;
   margin-bottom: 10px;
+  transition-duration: 0.2s;
+}
+
+a:hover {
+  transition-duration: 0s;
+  font-weight: 500;
 }
