--- a/src/App.css
+++ b/src/App.css
@@ -1,19 +1,4 @@
-@import url("https://fonts.googleapis.com/css2?family=Space+Grotesk:wght@300..700&display=swap");
-
-body {
-  font-family: "Space Grotesk", sans-serif;
-  text-align: center;
-  color: #000000;
-  background-color: #f5f5f5;
-}
-
-h1 {
-  font-size: 48px;
-  font-weight: 400;
-  color: black;
-}
-
-a {
+.link {
   font-size: 48px;
   font-weight: 400;
   color: darkgray;
@@ -23,7 +8,7 @@ a {
   transition-duration: 0.2s;
 }
 
-a:hover {
+.link:hover {
   transition-duration: 0s;
   font-weight: 500;
 }
