--- a/src/index.css
+++ b/src/index.css
@@ -1,7 +1,14 @@
-@import url("https://fonts.googleapis.com/css2?family=Space+Grotesk:wght@300..700&display=swap");
+@import url("https://fonts.googleapis.com/css2?family=Space+Grotesk:wght@300..700&family=Space+Mono:ital,wght@0,400;0,700;1,400;1,700&display=swap");
 
 body {
   font-family: "Space Grotesk", sans-serif;
   background-color: #f5f5f5;
   color: #000000;
+}
+
+pre {
+  font-family: "Space Mono", monospace;
+  background-color: #eeeeee;
+  border-radius: 5px;
+  padding: 5px;
 }
