--- a/src/index.css
+++ b/src/index.css
@@ -18,6 +18,7 @@ input {
   border-bottom: 1px solid black;
   background: none;
   height: 24px;
+  font-family: "Space Grotesk", sans-serif;
   font-size: 20px;
 }
 
