--- a/src/routes/root.css
+++ b/src/routes/root.css
@@ -1,5 +1,5 @@
-.link {
-  font-size: 48px;
+.big-link {
+  font-size: 3em;
   font-weight: 400;
   color: darkgray;
   text-decoration: none;
@@ -8,7 +8,7 @@
   transition-duration: 0.2s;
 }
 
-.link:hover {
+.big-link:hover {
   transition-duration: 0s;
   font-weight: 500;
 }
