--- a/src/components/ManfredChat.css
+++ b/src/components/ManfredChat.css
@@ -1,19 +1,28 @@
-.container {
+.manfred-container-outer {
+  display: flex;
+  justify-content: center;
+}
+
+.manfred-container-inner {
   display: flex;
   flex-direction: column;
   align-items: center;
-  padding: 20px;
-  background-color: #f5f5f5;
+  height: 100vh;
+  width: min(100%, 32em);
 }
 
 .messages-container {
   display: flex;
   flex-direction: column;
-  width: min(100%, 32em);
+  max-height: 100%;
+  overflow: scroll;
+  margin-top: auto;
+  width: 100%;
 }
 
 .message-input-container {
   width: 100%;
+  padding-bottom: 0.5em;
 }
 
 .message-input {
