--- a/src/index.css
+++ b/src/index.css
@@ -1,6 +1,9 @@
 @import url("https://fonts.googleapis.com/css2?family=Space+Grotesk:wght@300..700&family=Space+Mono:ital,wght@0,400;0,700;1,400;1,700&display=swap");
 
 body {
+  margin: 0;
+  padding: 0;
+  height: 100vh;
   font-family: "Space Grotesk", sans-serif;
   background-color: #f5f5f5;
   color: #000000;
