--- a/src/components/ManfredChat.css
+++ b/src/components/ManfredChat.css
@@ -1,14 +1,17 @@
 .manfred-container-outer {
   display: flex;
   justify-content: center;
+  align-items: center;
+  height: 85vh;
 }
 
 .manfred-container-inner {
   display: flex;
   flex-direction: column;
   align-items: center;
-  height: 100vh;
   width: min(100%, 32em);
+  /* height set in TSX */
+  transition: height 0.5s ease-in-out;
 }
 
 .messages-container {
