--- a/src/components/ManfredChat.css
+++ b/src/components/ManfredChat.css
@@ -2,7 +2,7 @@
   display: flex;
   justify-content: center;
   align-items: center;
-  height: 85vh;
+  min-height: 85vh;
 }
 
 .manfred-container-inner {
