--- a/src/manfred/components/MessageComponent.css
+++ b/src/manfred/components/MessageComponent.css
@@ -1,7 +1,10 @@
 .message {
   width: fit-content;
   max-width: 75%;
-  padding: 0.5em;
+  padding-left: 0.5em;
+  padding-right: 0.5em;
+  padding-top: 0em;
+  padding-bottom: 0em;
   margin-bottom: 0.5em;
   background-color: var(--fill-color);
   border-radius: 0.5em;
